# frontbox-rs

./: .editorconfig  Cargo.toml  README.md  TODO.md  output.txt
examples/: neuron_drop_target_mode.rs  neuron_init.rs  neuron_led_blending.rs  neuron_leds.rs  neutron_init.rs
fast-pinball-protocol/: Cargo.toml
fast-pinball-protocol/src/: lib.rs  line_parser.rs
fast-protocol/: Cargo.toml
fast-protocol/src/: common.rs  configure_driver.rs  event_response.rs  fast_command.rs  lib.rs  trigger_driver.rs
frontbox/: Cargo.toml
frontbox-derive/: Cargo.toml
frontbox-derive/src/: lib.rs
frontbox-fast/: Cargo.toml
frontbox-main/: Cargo.toml
frontbox-main/examples/: neuron_init.rs
frontbox-main/src/: fast_codec.rs  lib.rs  mainboard.rs  serial_interface.rs
frontbox-main/src/hardware/: boards.rs  device.rs  mod.rs
frontbox-storable-derive/: Cargo.toml
frontbox-storable-derive/src/: lib.rs
frontbox/examples/: neuron_drop_target_mode.rs  neuron_init.rs  neuron_led_blending.rs  neuron_leds.rs  neuron_starting_game.rs  neuron_state_transitions.rs
frontbox/src/: lib.rs  macros.rs  states.rs
frontbox/src/commands/: commands.rs  driver_commands.rs  driver_group_commands.rs  game_commands.rs  mod.rs  system_commands.rs  timer_commands.rs  writeable_config.rs  writeable_store.rs
frontbox/src/hardware_definition/: boot_config.rs  expansion_board.rs  io_network.rs  mod.rs
frontbox/src/hardware_definition/exp/: expansion_board_definition.rs  led_port_definition.rs  mod.rs
frontbox/src/hardware_definition/io/: driver_modes.rs  fast_io_boards.rs  io_board_builder.rs  io_network.rs  io_network_builder.rs  mod.rs  trigger_modes.rs
frontbox/src/led/: color.rs  led_renderer.rs  led_state.rs  mod.rs
frontbox/src/led/animations/: interpolation_animation.rs  sequence_animation.rs
frontbox/src/led/resolvers/: bezier_mix_resolver.rs  first_wins_resolver.rs
frontbox/src/machine/: commands.rs  config_value.rs  context.rs  dispatcher.rs  event.rs  fast_codec.rs  machine.rs  machine_builder.rs  machine_command.rs  machine_config.rs  mod.rs  plugin.rs  serial_interface.rs  switch_context.rs  system.rs  system_timer.rs
frontbox/src/machine/districts/: district.rs  mod.rs  player_district.rs  simple_district.rs  team_district.rs
frontbox/src/machine/store/: mod.rs  storable.rs  store.rs  store_command.rs
frontbox/src/plugins/: free_play.rs  game_points.rs  mod.rs  player_super_system.rs  player_system.rs
frontbox/src/protocol/: address.rs  common.rs  configure_hardware.rs  fast_command.rs  mod.rs  trigger_driver.rs  watchdog.rs
frontbox/src/protocol/driver/: driver_config.rs  mod.rs
frontbox/src/protocol/exp/leds/: configure_led_port.rs
frontbox/src/systems/: mod.rs  on_event_system.rs  system.rs  system_command.rs  system_container.rs  system_on_event.rs  system_timer.rs
src/: frontbox.rs  game.rs  lib.rs  machine.rs  mainboard.rs  serial_interface.rs  store.rs  switch_context.rs
src/hardware/: driver_config.rs  mod.rs  power.rs
src/hardware_definition/: expansion_board.rs  mod.rs
src/led/: animation.rs  color.rs  curve.rs  (+3 more)
tokio-pinball/: Cargo.toml
(+129 files in other folders)
