[package]
name = "frontbox"
version = "0.1.0"
edition = "2024"

[features]
default = ["machine"]
protocol = []
machine = ["protocol"]

[dependencies]
log = "0.4.29"

#[cfg(feature = "machine")]
futures-util = "0.3"
#[cfg(feature = "machine")]
tokio = { version = "1", features = ["full"] }
#[cfg(feature = "machine")]
tokio-serial = "5.4.4"
#[cfg(feature = "machine")]
tokio-util = { version = "0.7.18", features = ["codec"] }

bitflags = "2.10.0"
anymap2 = "0.13.0"
crossterm = { version = "0.29", features = ["event-stream"] }
dyn-clone = "1.0.20"

# bevy_time = "0.18"

[dev-dependencies]
env_logger = "0.11.8"
