[package]
name = "frontbox-main"
version = "0.1.0"
edition = "2024"

[dependencies]
frontbox-fast = { path = "../frontbox-fast" }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4.4"
log = "0.4.29"
tokio-util = { version = "0.7.18", features = ["codec"] }

[dev-dependencies]
env_logger = "0.11.8"
